--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
-  "singleQuote": true,
-  "trailingComma": "es5"
+	"singleQuote": false,
+	"semi": true,
+	"useTabs": false,
+	"tabWidth": 2,
+	"trailingComma": "all",
+	"printWidth": 80
 }
