--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,7 @@
 {
-	"singleQuote": false,
+	"singleQuote": true,
 	"semi": true,
-	"useTabs": false,
 	"tabWidth": 2,
 	"trailingComma": "all",
-	"printWidth": 80
+	"printWidth": 200
 }
